js262/test/language/expressions/async-arrow-function/early-errors-arrow-await-in-formals.js


/*---
author: Brian Terlson <brian.terlson@microsoft.com>
esid: pending
description: It is a SyntaxError if FormalParameters contains await
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();
async(await) => {  }
